[package]
name = "bittorrent_transceiver"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec.workspace = true
bytes.workspace = true
linkme.workspace = true # Required by g1_param.
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_param.workspace = true
g1_tokio.workspace = true

bittorrent_base = { workspace = true, features = ["param"] }
bittorrent_dht.workspace = true
bittorrent_extension.workspace = true
bittorrent_manager.workspace = true
bittorrent_peer.workspace = true
bittorrent_storage.workspace = true
bittorrent_tracker.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
