[package]
name = "bittorrent_utp"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.68"
bitvec = "1.0.1"
bytes = "1.4.0"
futures = "0.3.28"
linkme = "0.3.10" # Required by g1_param.
rand = "0.8.5"
snafu = "0.7.4"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"

g1_base = { path = "../../g1/base" }
g1_bytes = { path = "../../g1/bytes" }
g1_param = { path = "../../g1/param" }
g1_tokio = { path = "../../g1/tokio" }

bittorrent_base = { path = "../base", features = ["param"] }

[dev-dependencies]
hex-literal = "0.4.1"
