[package]
name = "bittorrent_utp"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
bitvec.workspace = true
bytes.workspace = true
futures.workspace = true
libc.workspace = true
linkme.workspace = true # Required by g1_param.
rand.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_bytes.workspace = true
g1_param.workspace = true
g1_tokio = { workspace = true, features = ["icmp"] }

bittorrent_base = { workspace = true, features = ["param"] }

[dev-dependencies]
hex-literal.workspace = true
