[package]
name = "bt_base"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec.workspace = true
bytes.workspace = true
rand.workspace = true
serde.workspace = true
snafu.workspace = true

g1_base.workspace = true

[dev-dependencies]
hex-literal.workspace = true
serde_json.workspace = true
