[package]
name = "bt_base"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec.workspace = true
bytes.workspace = true
lazy-regex.workspace = true
rand.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha1.workspace = true
snafu.workspace = true
url.workspace = true

g1_base.workspace = true

[dev-dependencies]
hex-literal.workspace = true
serde_json.workspace = true
