[package]
name = "bt_bencode"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true, features = ["serde"] }
lazy-regex.workspace = true
serde.workspace = true
serde_bytes.workspace = true
snafu.workspace = true

g1_base.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
