[package]
name = "ddcache_client"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
snafu.workspace = true
tracing.workspace = true
uuid.workspace = true

etcd_pubsub.workspace = true

ddcache_client_raw.workspace = true
ddcache_client_service.workspace = true
ddcache_rpc.workspace = true

[dev-dependencies]
clap.workspace = true
tokio.workspace = true
g1_cli = { workspace = true, features = ["param", "tracing"] }
