[package]
name = "ddcache_proto"
version.workspace = true
edition.workspace = true

[dependencies]
capnp.workspace = true
serde = { workspace = true, features = ["derive"] }
snafu.workspace = true

etcd_client.workspace = true
etcd_pubsub.workspace = true
g1_capnp.workspace = true
g1_zmq.workspace = true

[build-dependencies]
capnpc.workspace = true

[dev-dependencies]
# examples/ddcache-proto
bytes.workspace = true
clap.workspace = true
tokio.workspace = true
zmq.workspace = true
g1_cli = { workspace = true, features = ["param", "tracing"] }
g1_tokio.workspace = true
